# paintingAutomower

./: .gitignore  README.md  run_netplan_apply.sh
calculations/: calc_velocities.py  calc_velocities_550.py  change_goal.py  change_goal_550.py  comb_cut.py  coord_sys_trans.py  data.json  go_to_xy.py  go_to_xy_P.py  go_to_xy_PID2.py  go_to_xy_PID3.py  go_to_xy_PID4.py  import_smbus.py  imu.py  kalman.py  kalman2.py  lqr.py  lqr_test.py  main.py  optimize_k_params.py  paint.py  plot_550.py  plot_data.py  plot_data2.py  servo.py  simulate.py  simulatedData.json
calculations/old/: go_to_xy.py  go_to_xy_p.py  go_to_xy_pid.py
data/: 20230325095922.json  20230325095923.json  20230325100054.json  20230325100055.json  20230325101946.json  20230325101947.json  20230325102307.json  20230325102308.json  20230325102353.json  20230325102423.json  20230325102424.json  20230325102543.json  20230325102933.json  20230325102934.json  20230325103031.json  20230325103032.json  20230325103138.json  20230325103410.json  20230325103411.json  20230325103506.json  20230325103918.json  20230325103919.json  20230325103952.json  20230325103953.json  20230325104115.json  20230325104116.json  20230325104232.json  20230325104233.json  20230325104321.json  20230325104322.json  20230325111623.json  20230325111707.json  20230325111743.json  20230325111744.json  20230325112220.json  20230325112413.json  20230325112606.json  20230325113023.json  20230325113024.json  20230325113100.json  (+623 more)
hrp/am_driver/scripts/: go_to_xy.py  go_to_xy_fancy.py  hrp_teleop.py  main.py  main2.py  (+2 more)
install/: hrp2-autostart.sh  hrp2-key_control.sh  hrp2-key_control.sh.save  hrp2-main.sh  hrp2-main.sh.save  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/share/hqv_keyboard_remote_drive/: keyboard_remote_drive.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/hqv_sync_sensors/: hqv_sync_odom_imu.launch.py  hqv_sync_wheels.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/hrp_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/hrp_pkg/cmake/: hrp_pkgConfig.cmake
install/share/hrp_pkg/launch/: hrp.launch.py  hrp_keepalive.launch.py  lona.launch.py
python/: comb_cut.py  paint.py
userInput/: getUserInput.js  index.html  inputBoxes.css  main.js  paintDimension.json  paintLines.js  pixelConstants.js  saveToJson.js  server.py  submitButton.js
(+1311 files in other folders)
