<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hqv_keyboard_remote_drive</name>
  <version>0.0.0</version>
  <description>Node for driving the mower with keyboard</description>
  <maintainer email="marcus.liljedahl@husqvarnagroup.com">marcus</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>hqv_public_interface</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
